Updated index.html with new content

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -46,7 +46,18 @@
         </div>
       </main>
       <footer>
-        <p>This project was coded by Derartu Nigatu</p>
+        <p>
+          This project was coded by
+          <a href="https://github.com/derartuge19" target="_blank"
+            >Derartu Nigatu</a
+          >and
+          <a
+            href="https://github.com/derartuge19/My-Weather-app"
+            target="_blank"
+            >on GitHub</a
+          >
+          and hosting <a href="" target="_blank">netlify</a>
+        </p>
       </footer>
     </div>
 
