changing the color of the button

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -56,7 +56,12 @@
             target="_blank"
             >on GitHub</a
           >
-          and hosting <a href="" target="_blank">netlify</a>
+          and hosting
+          <a
+            href="https://app.netlify.com/sites/glowing-arithmetic-ed9c1a/overview"
+            target="_blank"
+            >netlify</a
+          >
         </p>
       </footer>
     </div>
