changing the weather information

--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -34,8 +34,9 @@
             <p id="current-date-time" class="current-date-time"></p>
 
             <p class="current-details">
-              Saturday 15:32, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              <span id="time"></span> <span id="description"></span> <br />
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed">7.2km/h</strong>
             </p>
           </div>
           <div class="current-temperature">
